# String

./: CMakeLists.txt  Readme  String.c  String.h  main.c  unittests.cmake
tests/: test_append_char_string.c  test_append_printf.c  test_compare_with_char_string.c  test_compare_with_other.c  test_do_end_with_char_string.c  test_do_end_with_data.c  test_do_end_with_other.c  test_init.c
